# terragrunt-report

./: LICENSE  MANIFEST.in  README.md  setup.cfg
tgreport/: __main__.py
tgreport/templates/: report.html
