[metadata]
name = terragrunt-report
url = https://github.com/sbeyn/terragrunt-report
description = https://github.com/sbeyn/terragrunt-report
author = @sbeyn
license = MIT
license_file = LICENSE
version = file: VERSION
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    terragrunt
    terraform
    plan
    reporting
    html

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources
    Flask==1.1.2
    Jinja2==2.11.2
    jinja2-time==0.2.0
    boltons==20.2.1

[options.entry_points]
console_scripts =
    tgreport = tgreport.__main__:main

[bdist_wheel]
universal = 1
